# Netico

./: .gitignore  CMakeLists.txt  README.md  makeudp.py  pico_epaper_import.cmake
src/: CMakeLists.txt  econsole.c  econsole.h  main.c  usock.c  usock.h
